config/sample-app/store-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-v1
  namespace: demo-gw
  annotations:
  - networking.gke.io/max-rate-per-endpoint: 10
spec:
  selector:
    app: store
    version: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
