config/sample-app/store-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: public-store-route
  namespace: demo-gw
  labels:
    gateway: store
spec:
  hostnames:
    - "demo.example.com"
  parentRefs:
    - name: store
  rules:
    - backendRefs:
        - name: store-v1
          port: 8080
